<?xml version="1.0"?>
<package format="3">
  <name>dsr_isaac_bridge</name>
  <version>0.0.1</version>
  <description>Bridge between Doosan ROS2 services and Isaac Sim</description>
  <maintainer email="hanku@kshan">hanku</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>dsr_msgs2</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
</package>
