<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>koras_kinematics</name>
  <version>0.0.1</version>
  <description>Koras robot FK/IK/Dynamics pybind11 wrapper</description>
  <maintainer email="hanku@koras.com">hanku</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>pybind11-dev</build_depend>
  <exec_depend>python3-pybind11</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
