cmake_minimum_required(VERSION 3.5)

project(grp_control_msg)

# Default to C++17
if(NOT CMAKE_CXX_STANDARD)
    set(CMAKE_CXX_STANDARD 17)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
    "msg/GripperMsg.msg"
    "srv/GripperCommand.srv"
    "srv/PosVelCurCtrl.srv"
    "srv/SingleBoolean.srv"
    "srv/SingleInt.srv"
    "srv/Void.srv"
    "srv/StopMotor.srv"
    "srv/DriverEnable.srv"
    "srv/GripperControl.srv"
    "srv/SetParameter.srv"
    "srv/Modbus.srv"
    "srv/ArduinoControl.srv"
    "srv/SlaveChange.srv"
    
    
    
    
    DEPENDENCIES builtin_interfaces std_msgs
)

install(
  PROGRAMS
  motor_current_listener.py
  DESTINATION lib/${PROJECT_NAME}
)


ament_export_dependencies(rosidl_default_runtime)
ament_package()
