<package format="3">
  <name>msg_srv_sample</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="inhwan94@korea.ac.kr">Inhwan Yoon</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
