<package format="3">
 <name>sample_code</name>
 <version>0.0.0</version>
 <description>TODO: Package description</description>
 <maintainer email="inhwan94@korea.ac.kr">Inhwan Yoon</maintainer>
 <license>TODO: License declaration</license>

 <buildtool_depend>ament_cmake</buildtool_depend>

<depend>rclcpp</depend>
<depend>grp_control_msg</depend>
<depend>msg_srv_sample</depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>
</package>