<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kr_gcs_ui</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="inhwan94@korea.ac.kr">Inhwan Yoon</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>grp_control_msg</depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>qt5-qmake</build_depend>
  <exec_depend>libqt5-core</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
